# hwmonitor.py

./: README.md  setup.cfg  setup.py
hwmonitor/: __init__.py
tests/hwmonitor/examples/: read.py  sensor.py  sensors.py
