# https://pypi.org/project/setupcfg-generator/
[metadata]
name = hwmonitor
version = 2019.3.22
url = https://github.com/looking-for-a-job/hwmonitor.py
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: README.md
long_description_content_type = text/markdown
keywords = hwmonitor

[options]
install_requires = 
	public
	runcmd
	setuptools
packages = 
	hwmonitor
